Travel::Status::DE::IRIS 1.23 - Sat Dec 29 2018

    * Ignore apparently useless "ZOB" (central omnibus station) links at most
      main stations. This decreases the average runtime and also fixes
      some S-Bahn trains being reported twice in München Hbf.
    * Result->qos_messages: Skip superseded messages. They're still present in
      ->messages.
    * Result->route_interesting: Filter Hbf suffixes (not just "Hbf"); include
      .hl.n (czech main station).

Travel::Status::DE::IRIS 1.22 - Sun Dec 16 2018

    * Add delay code 4 (unforeseen staff shortage, thanks to Fabian Schwarz)
    * Add delay code 37 (technical failure in carriage, thanks to @marudor)

Travel::Status::DE::IRIS 1.21 - Sun Sep 09 2018

    * Fix crash when receiving invalid XML due to network issues

Travel::Status::DE::IRIS 1.20 - Mon Aug 06 2018

    * Use schedule instead of realtime data when determining whether a train
      falls within the lookahead time frame. This fixes severely delayed
      trains being ignored even if their scheduled arrival/departure is very
      soon or has already passed.

Travel::Status::DE::IRIS 1.19 - Wed Aug 01 2018

    * db-iris: Fix "-ot" ignoring arrival delay if departure is on time
    * Add delay code 12 (waiting for passengers in a ship)
    * Result->route_interesting: Include dutch and swiss central station names
    * Result: New accessors arrival_delay and departure_delay

Travel::Status::DE::IRIS 1.18 - Mon Apr 23 2018

    * Update station dataset to Open Data Haltestellenliste 2017-09

Travel::Status::DE::IRIS 1.17 - Sat Apr 14 2018

    * Fix DS100 codes for Dülmen, Stuttgart Hbf (tief), and Wolfenbüttel
    * db-iris: Support -d/--date "tomorrow"

Travel::Status::DE::IRIS 1.16 - Sat Jul 08 2017

    * Fix miscalculated delays of prematurely terminating trains
    * Lookahead and lookbehind are now interpreted with 1-minute granularity.
      Note that this also affects the default lookahead.